<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout">
    <data>
        <variable name="onCityNextClickListener" type="android.view.View.OnClickListener"/>
    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/weather_bg"
            tools:context=".ui.WeatherDataFragment">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chandigarh"
                android:id="@+id/tv_city_name" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="56dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" tools:text="Chandigarh"
                android:textSize="30sp" android:textColor="@color/colorAccent"
                android:gravity="center"
                android:textAllCaps="false" android:fontFamily="sans-serif-medium"
        />
        <ImageView
                app:srcCompat="@drawable/ic_arrow_forward_white_24dp"
                android:layout_width="32dp"
                android:layout_height="0dp"
                android:id="@+id/imageView"
                android:onClick="@{onCityNextClickListener}"
                app:layout_constraintBottom_toBottomOf="@+id/tv_city_name"
                app:layout_constraintTop_toTopOf="@+id/tv_city_name"
                app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toEndOf="@+id/tv_city_name"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
        <ImageView
                app:srcCompat="@drawable/ic_cloud_black_24dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/id_weather_cloud_icon" app:layout_constraintStart_toStartOf="@+id/tv_city_name"
                app:layout_constraintEnd_toEndOf="@+id/tv_city_name" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_city_name" app:layout_constraintHorizontal_bias="0.49"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp" android:textColor="@color/colorAccent"
                android:gravity="center"
                tools:text="16*C"
                android:text="@string/_16_c"
                android:textAllCaps="false" android:fontFamily="sans-serif-medium"
                android:id="@+id/id_temperature_wh" app:layout_constraintStart_toStartOf="@+id/id_weather_cloud_icon"
                app:layout_constraintEnd_toEndOf="@+id/id_weather_cloud_icon" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/id_weather_cloud_icon"
                app:layout_constraintHorizontal_bias="0.512"/>
        <TextView
                tools:text="6*"
                android:text="@string/_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_temp_a"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/id_temperature_wh"
                android:textSize="18sp" android:fontFamily="sans-serif-medium" android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/id_temperature_wh"/>
        <TextView
                tools:text="22*"
                android:text="@string/_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_temp_b"
                app:layout_constraintTop_toTopOf="@+id/txt_temp_a"
                app:layout_constraintBottom_toBottomOf="@+id/txt_temp_a"
                app:layout_constraintStart_toEndOf="@+id/txt_temp_a"
                android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
                app:layout_constraintVertical_bias="0.0"
                android:textSize="18sp" android:fontFamily="sans-serif-medium" android:textColor="@color/colorAccent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/id_temperature_wh"
                android:layout_marginRight="8dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" android:textColor="@color/colorAccent"
                android:gravity="center"
                tools:text="Scattered Thunderstorm"
                android:text="@string/scattered_thunderstorm"
                android:textAllCaps="false" android:fontFamily="sans-serif-medium"
                android:id="@+id/id_tv_title_wh" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_temp_a" android:layout_marginTop="32dp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/view" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/id_tv_title_wh" android:layout_marginTop="24dp"
                android:layout_margin="10dp" android:background="@drawable/color_cursor_white"/>
        <TextView
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                tools:text="Mon"
                android:gravity="center"
                android:text="@string/mon"
                android:textSize="18sp" android:fontFamily="sans-serif-medium" android:textColor="@color/colorAccent"
                android:id="@+id/tv_day_mon"
                app:layout_constraintTop_toBottomOf="@+id/view" android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/view" app:layout_constraintEnd_toStartOf="@+id/tv_day_tue"
        />
        <ImageView
                app:srcCompat="@drawable/ic_cloud_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_mon" app:layout_constraintStart_toStartOf="@+id/tv_day_mon"
                app:layout_constraintEnd_toEndOf="@+id/tv_day_mon" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_day_mon"/>
        <TextView
                tools:text="6/13"
                android:text="@string/_6_13"
                android:textSize="18sp" android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_mon" app:layout_constraintStart_toStartOf="@+id/iv_mon"
                app:layout_constraintEnd_toEndOf="@+id/iv_mon" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_mon"/>

        <TextView
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                tools:text="Tue"
                android:gravity="center"
                android:text="@string/tue"
                android:textSize="18sp" android:fontFamily="sans-serif-medium" android:textColor="@color/colorAccent"
                android:id="@+id/tv_day_tue" app:layout_constraintStart_toEndOf="@+id/tv_day_mon"
                app:layout_constraintTop_toTopOf="@+id/tv_day_mon" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_day_mon" app:layout_constraintVertical_bias="0.0"
                app:layout_constraintEnd_toStartOf="@+id/tv_day_wed"
        />
        <ImageView
                app:srcCompat="@drawable/ic_cloud_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_tue" app:layout_constraintStart_toStartOf="@+id/tv_day_tue"
                app:layout_constraintEnd_toEndOf="@+id/tv_day_tue" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_day_tue"/>
        <TextView
                tools:text="16/22"
                android:text="@string/_16_22"
                android:textSize="18sp" android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tue" app:layout_constraintStart_toStartOf="@+id/iv_tue"
                app:layout_constraintEnd_toEndOf="@+id/iv_tue" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_tue"/>

        <TextView
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                tools:text="Wed"
                android:gravity="center"
                android:text="@string/wed"
                android:textSize="18sp" android:fontFamily="sans-serif-medium" android:textColor="@color/colorAccent"
                android:id="@+id/tv_day_wed" app:layout_constraintStart_toEndOf="@+id/tv_day_tue"
                app:layout_constraintTop_toTopOf="@+id/tv_day_tue" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_day_tue" app:layout_constraintVertical_bias="0.0"
                app:layout_constraintEnd_toStartOf="@+id/tv_day_thu"
        />
        <ImageView
                app:srcCompat="@drawable/ic_cloud_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_wed" app:layout_constraintStart_toStartOf="@+id/tv_day_wed"
                app:layout_constraintEnd_toEndOf="@+id/tv_day_wed" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_day_wed"/>
        <TextView
                tools:text="16/24"
                android:text="@string/_16_24"
                android:textSize="18sp" android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_wed" app:layout_constraintStart_toStartOf="@+id/iv_wed"
                app:layout_constraintEnd_toEndOf="@+id/iv_wed" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_wed"/>

        <TextView
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                tools:text="Thu"
                android:gravity="center"
                android:text="@string/thu"
                android:textSize="18sp" android:fontFamily="sans-serif-medium" android:textColor="@color/colorAccent"
                android:id="@+id/tv_day_thu" app:layout_constraintStart_toEndOf="@+id/tv_day_wed"
                app:layout_constraintTop_toTopOf="@+id/tv_day_wed"
                app:layout_constraintBottom_toBottomOf="@+id/tv_day_wed"
                app:layout_constraintEnd_toStartOf="@+id/tv_day_fri"
        />
        <ImageView
                app:srcCompat="@drawable/ic_cloud_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_thu" app:layout_constraintStart_toStartOf="@+id/tv_day_thu"
                app:layout_constraintEnd_toEndOf="@+id/tv_day_thu" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_day_thu"/>
        <TextView
                tools:text="22/18"
                android:text="@string/_22_18"
                android:textSize="18sp" android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_thu" app:layout_constraintStart_toStartOf="@+id/iv_thu"
                app:layout_constraintEnd_toEndOf="@+id/iv_thu" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_thu"/>

        <TextView
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                tools:text="Fri"
                android:gravity="center"
                android:text="@string/fri"
                android:textSize="18sp" android:fontFamily="sans-serif-medium" android:textColor="@color/colorAccent"
                android:id="@+id/tv_day_fri"
                app:layout_constraintTop_toTopOf="@+id/tv_day_thu"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/tv_day_thu"
                app:layout_constraintStart_toEndOf="@+id/tv_day_thu"
                app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
                app:srcCompat="@drawable/ic_cloud_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_fri" app:layout_constraintStart_toStartOf="@+id/tv_day_fri"
                app:layout_constraintEnd_toEndOf="@+id/tv_day_fri" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_day_fri" app:layout_constraintHorizontal_bias="0.185"/>
        <TextView
                tools:text="25/14"
                android:text="@string/_25_14"
                android:textSize="18sp" android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fri" app:layout_constraintStart_toStartOf="@+id/iv_fri"
                app:layout_constraintEnd_toEndOf="@+id/iv_fri" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_fri"/>
    </android.support.constraint.ConstraintLayout>
</layout>
